--- a/.eslintrc
+++ b/.eslintrc
@@ -9,9 +9,16 @@
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
 
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
-  },
+    "no-unused-vars": "error",
+    "no-console":"error",
+    "no-undef":"error",
+    "no-unused-expressions":"error",
+    "no-unreachable":"error",
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]},
+     "globals": {
+     "process": "readonly"
+    },
+
 
   "env": {
     "browser": true,
