--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "author": "Md. Anowar Hosen",
   "license": "ISC",
   "lint-staged": {
-    "src/**/*.ts":"yarn lint-prettier"
+    "src/**/*.ts": "yarn lint-prettier"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
